# mikrotik-routeros-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  devices.yaml.example  pyproject.toml
.github/workflows/: ci.yml
src/mikrotik_routeros_mcp/: client.py  config.py  dashboard.py  dashboard_ui.html  models.py  safety.py  server.py
src/mikrotik_routeros_mcp/transports/: __init__.py  api.py  base.py  ssh.py
tests/: test_config.py  test_dashboard.py  test_safety.py
